# musvc

./: .dockerignore  .gitignore  Dockerfile  README.md  musvc.cabal  stack.yaml
app/: API.hs  Main.hs
src/MuSvc/: APIHandlers.hs  Types.hs
