name:                musvc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/musvc#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Lib.Prelude
                     , MuSvc.Types
  build-depends:       base >= 4.7 && < 5
                     , protolude >= 0.2.2
                     , scotty
                     , unliftio
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

executable musvc
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N -optl-static -optl-pthread
  build-depends:       base
                     , aeson
                     , musvc
                     , protolude >= 0.2.2
                     , scotty
                     , optparse-applicative
  other-modules:       API
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

test-suite musvc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , musvc
                     , protolude >= 0.2.2
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

source-repository head
  type:     git
  location: https://github.com/githubuser/musvc
